--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
         "*://*/*"
       ],
       "js": [
-        "js/jquery.min.js",
+        "js/overscroll.min.js",        
         "./inject.js"
       ]
     }
